crates/tui/snapshots/fullscreen/frame/hooks_slash_completion.snap
---
source: crates/tui/src/app/fullscreen/frame_tests.rs
expression: rendered
---
  .                                                                [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ─────────────────────────────────────────────────────────────────────── 1/2   
  /hooks                     browse and manage Hooks                            
  /mode                      choose how the next task is handled                
  ────────────────────────────────────────────────────────────────────────────  
  > /hooks                                                                      
  ─────────────────────────────────────────────────────────── Automatic model   
                                                                                
  ⏸ Manual
