crates/tui/snapshots/fullscreen/frame/input_history_search.snap
---
source: crates/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 20)"
---
  .                                                                                    [Dashboard]  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  ──History search: find · ↑/↓ browse · Enter edit · Esc cancel───────────────────────────────────  
  > find the input history owner                                                                    
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  ⏸ Manual
