crates/tui/snapshots/fullscreen/frame/modal_wrapped_tabs.snap
---
source: crates/tui/src/app/fullscreen/frame_tests.rs
expression: text
---
"                    "
"┌── Panel ─────[✗]─┐"
"│                  │"
"│   First tab      │"
"│   Second tab     │"
"│                  │"
"│> First item      │"
"│                  │"
"│                  │"
"│                  │"
"└──────────────────┘"
"                    "
