crates/tui/snapshots/fullscreen/frame/model_list_pinned.snap
---
source: crates/tui/src/app/fullscreen/frame_tests.rs
expression: rendered
---
  .                                                                                    [Dashboard]  
                                                                                                    
            ┌── Model ────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search models                                                      │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  Pinned ─────────────────────────────────────────────────────────────── │             
            │> gateway-model                                                          │             
            │                                                                         │             
            │  Other models ───────────────────────────────────────────────────────── │             
            │  Unconfigured model                                                     │             
            │                                                                         │             
  ──────────│                                                                         │───────────  
  > Build an└─────────────────────────────────────────────────────────────────────────┘             
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  ↑↓ select · / search · p unpin · Enter apply · Esc cancel
